<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".LoginActivity">
    <ImageView
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/profile"
        android:layout_margin="16dp"
        android:id="@+id/image_login"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_login"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:text="@string/name_dev"/>
    <TextView
        style="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_login"
        android:textAlignment="center"
        android:text="@string/software_developer"/>
    <TextView
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textStyle="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_login"
        android:textAlignment="textStart"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/text_email"
        android:inputType="textEmailAddress"
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_email"/>
    <TextView
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textStyle="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/message"/>

    <EditText
        android:id="@+id/text_message"
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:textAlignment="textStart"
        android:inputType="text|textMultiLine"
        android:gravity="start"
        android:hint="@string/write_what_you_need"/>
    <Button
        android:id="@+id/button_send"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content" android:text="@string/send" />

</LinearLayout>